--- a/index.html
+++ b/index.html
@@ -88,11 +88,9 @@
               <li><a href="#">Stationaries </a></li>
               <li><a href="#">Electronics </a></li>
               <li><a href="#">Hostel/PG Rooms </a></li>
-              <li><a href="#">Others </a></li>
-              <li><a href="#">About Us </a></li>            
+              <li><a href="#">Others </a></li>          
               <li><a href="#">Contact</a></li>
               <li><a href="#">My Account </a></li>
-              <li><a href="#">CheckOut </a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -117,10 +115,10 @@
                 <img data-seq src="img/slider/2.jpg" alt="Wristwatch slide img" />
               </div>
               <div class="seq-title">
-                <span data-seq>Save Up to 40% Off</span>                
-                <h2 data-seq>Wristwatch Collection</h2>                
+                <!-- <span data-seq>Save Up to 40% Off</span>                 -->
+                <h2 data-seq>Categories</h2>                
                 <p data-seq>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, illum.</p>
-                <a data-seq href="#" class="aa-shop-now-btn aa-secondary-btn">SHOP NOW</a>
+                <!-- <a data-seq href="#" class="aa-shop-now-btn aa-secondary-btn">SHOP NOW</a> -->
               </div>
             </li>
             <li>
@@ -128,10 +126,10 @@
                 <img data-seq src="img/slider/3.jpg" alt="Women Jeans slide img" />
               </div>
               <div class="seq-title">
-                <span data-seq>Save Up to 75% Off</span>                
-                <h2 data-seq>Jeans Collection</h2>                
+                <!-- <span data-seq>Save Up to 75% Off</span>                 -->
+                <h2 data-seq>Products</h2>                
                 <p data-seq>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, illum.</p>
-                <a data-seq href="#" class="aa-shop-now-btn aa-secondary-btn">SHOP NOW</a>
+                <!-- <a data-seq href="#" class="aa-shop-now-btn aa-secondary-btn">SHOP NOW</a> -->
               </div>
             </li>         
             <li>
@@ -139,10 +137,10 @@
                 <img data-seq src="img/slider/4.jpg" alt="Shoes slide img" />
               </div>
               <div class="seq-title">
-                <span data-seq>Save Up to 75% Off</span>                
-                <h2 data-seq>Exclusive Shoes</h2>                
+                <!-- <span data-seq>Save Up to 75% Off</span>                 -->
+                <h2 data-seq>Donate Us</h2>                
                 <p data-seq>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, illum.</p>
-                <a data-seq href="#" class="aa-shop-now-btn aa-secondary-btn">SHOP NOW</a>
+                <!-- <a data-seq href="#" class="aa-shop-now-btn aa-secondary-btn">SHOP NOW</a> -->
               </div>
             </li>
           </ul>
