--- a/stationaries.html
+++ b/stationaries.html
@@ -84,11 +84,9 @@
                 <li><a href="#">Stationaries </a></li>
                 <li><a href="#">Electronics </a></li>
                 <li><a href="#">Hostel/PG Rooms </a></li>
-                <li><a href="#">Others </a></li>
-                <li><a href="#">About Us </a></li>            
+                <li><a href="#">Others </a></li>         
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="#">My Account </a></li>
-                <li><a href="#">CheckOut </a></li>
               </ul>
             </div>
           </div>
@@ -98,7 +96,7 @@
    
     <!-- catg header banner section -->
     <section id="aa-catg-head-banner">
-      <img src="img/fashion/fashion-header-bg-8.jpg" alt="fashion img">
+      <img src="C:\Users\swarn\Downloads\station.jpeg" alt="fashion img">
       <div class="aa-catg-head-banner-area">
         <div class="container">
           <div class="aa-catg-head-banner-content">
