--- a/electronics.html
+++ b/electronics.html
@@ -86,7 +86,8 @@
                 <li><a href="#">Hostel/PG Rooms </a></li>
                 <li><a href="#">Others </a></li>           
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="#">My Account </a></li>
+                <li><a href="#">Login </a></li>
+                <li><a href="#">Sell/Donate </a></li>
               </ul>
             </div>
           </div>
@@ -239,7 +240,7 @@
                       <ul class="aa-footer-nav">
                         <li><a href="#">Home</a></li>
                         <li><a href="#">Our Products</a></li>
-                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Donate Us</a></li>
                         <li><a href="#">Contact Us</a></li>
                       </ul>
                     </div>
