--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
               <li><a href="#">Hostel/PG Rooms </a></li>
               <li><a href="#">Others </a></li>          
               <li><a href="#">Contact</a></li>
-              <li><a href="#">My Account </a></li>
+              <li><a href="#">Login </a></li>
+              <li><a href="#">Sell/Donate </a></li>
+
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -474,7 +476,7 @@
                   <ul class="aa-footer-nav">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Our Products</a></li>
-                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Donate Us</a></li>
                     <li><a href="#">Contact Us</a></li>
                   </ul>
                 </div>
