--- a/productdetail.html
+++ b/productdetail.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">    
-    <title>Daily Shop | Product Detail</title>
+    <title>CollegeAdda | Product Detail</title>
     
     <!-- Font awesome -->
     <link href="css/font-awesome.css" rel="stylesheet">
@@ -99,7 +99,8 @@
               <li><a href="#">Hostel/PG Rooms </a></li>
               <li><a href="#">Others </a></li>          
               <li><a href="contact.html">Contact</a></li>
-              <li><a href="#">My Account </a></li>
+              <li><a href="#">Login </a></li>
+              <li><a href="#">Sell/Donate </a></li>
             </ul>
           </div>
         </div>
@@ -305,7 +306,7 @@
                     <ul class="aa-footer-nav">
                       <li><a href="#">Home</a></li>
                       <li><a href="#">Our Products</a></li>
-                      <li><a href="#">About Us</a></li>
+                      <li><a href="#">Donate Us</a></li>
                       <li><a href="#">Contact Us</a></li>
                     </ul>
                   </div>
