--- a/selldonate.html
+++ b/selldonate.html
@@ -124,10 +124,12 @@
                        <input type="text" placeholder="Name">
                        <label for="">Mobile Number</label>
                        <input type="text" placeholder="Mobile No.">
-                       <label for="">Username or Email Address</label>
-                       <input type="text" placeholder="Username or Email">
-                       <label for="">Password</label>
-                       <input type="password" placeholder="Password">
+                       <label for="">College Name</label>
+                       <input type="text" placeholder="College Name">
+                       <label for="">Branch & Year</label>
+                       <input type="text" placeholder="Branch/Year">
+                       <label for="">Roll Number</label>
+                       <input type="text" placeholder="Roll No.">
                        <button type="submit" class="aa-browse-btn">Submit</button>
                      </form>
                    </div>
