--- a/index.html
+++ b/index.html
@@ -238,40 +238,40 @@
                       <ul class="row aa-product-catg">
                         <li class="col-lg-3 col-sm-6 col-12">
                           <figure>
-                            <a class="aa-product-img" href="#"><img src="img/man/polo-shirt-2.png" alt="polo shirt img"></a>
+                            <a class="aa-product-img" href="#"><img src="img/stationaries/bsgrewal.jpg" alt="bsgrewal img"></a>
                             <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
                               <figcaption>
-                              <h4 class="aa-product-title"><a href="#">Polo T-Shirt</a></h4>
+                              <h4 class="aa-product-title"><a href="#">B.S. Grewal</a></h4>
                               <span class="aa-product-price">$45.50</span><span class="aa-product-price"><del>$65.50</del></span>
                             </figcaption>
                           </figure>                        
                         </li>
                         <li class="col-lg-3 col-sm-6 col-12">
                           <figure>
-                            <a class="aa-product-img" href="#"><img src="img/man/t-shirt-1.png" alt="polo shirt img"></a>
+                            <a class="aa-product-img" href="#"><img src="img/stationaries/c++.jpg" alt="c++ img"></a>
                             <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
                              <figcaption>
-                              <h4 class="aa-product-title"><a href="#">T-Shirt</a></h4>
+                              <h4 class="aa-product-title"><a href="#">OOPS </a></h4>
                               <span class="aa-product-price">$45.50</span>
                             </figcaption>
                           </figure>                         
                         </li>
                         <li class="col-lg-3 col-sm-6 col-12">
                           <figure>
-                            <a class="aa-product-img" href="#"><img src="img/man/polo-shirt-1.png" alt="polo shirt img"></a>
+                            <a class="aa-product-img" href="#"><img src="img/stationaries/digitaldesign.jpg" alt="digitaldesign img"></a>
                             <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
                              <figcaption>
-                              <h4 class="aa-product-title"><a href="#">Polo T-Shirt</a></h4>
+                              <h4 class="aa-product-title"><a href="#">Digital Design</a></h4>
                               <span class="aa-product-price">$45.50</span><span class="aa-product-price"><del>$65.50</del></span>
                             </figcaption>
                           </figure>                         
                         </li>
                         <li class="col-lg-3 col-sm-6 col-12">
                           <figure>
-                            <a class="aa-product-img" href="#"><img src="img/man/polo-shirt-4.png" alt="polo shirt img"></a>
+                            <a class="aa-product-img" href="#"><img src="img/stationaries/polymersnotes.jpg" alt="polymernotes img"></a>
                             <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
                             <figcaption>
-                              <h4 class="aa-product-title"><a href="#">Polo T-Shirt</a></h4>
+                              <h4 class="aa-product-title"><a href="#">Polymers Notes</a></h4>
                               <span class="aa-product-price">$45.50</span><span class="aa-product-price"><del>$65.50</del></span>
                             </figcaption>
                           </figure>  
