--- a/stationaries.html
+++ b/stationaries.html
@@ -97,7 +97,7 @@
    
     <!-- catg header banner section -->
     <section id="aa-catg-head-banner">
-      <img src="C:\Users\swarn\Downloads\station.jpeg" alt="fashion img">
+      <img src="img/stationaries/stationariesbanner.jpeg" alt="fashion img">
       <div class="aa-catg-head-banner-area">
         <div class="container">
           <div class="aa-catg-head-banner-content">
