--- a/products/uvnotes.html
+++ b/products/uvnotes.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">    
-    <title>CollegeAdda | Product Detail</title>
+    <title>CollegeAdda | Product</title>
     
     <!-- Font awesome -->
     <link href="../css/font-awesome.css" rel="stylesheet">
@@ -114,7 +114,7 @@
    <div class="aa-catg-head-banner-area">
      <div class="container">
       <div class="aa-catg-head-banner-content">
-        <h2>Product Name</h2>
+        <h2>UV-VIS Spectroscopy Notes</h2>
       </div>
      </div>
    </div>
@@ -134,7 +134,7 @@
                   <div class="aa-product-view-slider">                                
                     <div id="demo-1" class="simpleLens-gallery-container">
                       <div class="simpleLens-container">
-                        <div class="simpleLens-big-image-container"><a data-lens-image="img/view-slider/large/polo-shirt-1.png" class="simpleLens-lens-image"><img src="img/view-slider/medium/polo-shirt-1.png" class="simpleLens-big-image"></a></div>
+                        <div class="simpleLens-big-image-container"><a data-lens-image="img/view-slider/large/polo-shirt-1.png" class="simpleLens-lens-image"><img src="../img/stationaries/uvnotes.jpg" class="simpleLens-big-image"></a></div>
                       </div>
                     </div>
                   </div>
@@ -142,7 +142,7 @@
                 <!-- Modal view content -->
                 <div class="col-md-7 col-sm-7 col-xs-12">
                   <div class="aa-product-view-content">
-                    <h3>Product Name</h3>
+                    <h3>UV-VIS Spectroscopy Notes</h3>
                     <div class="aa-price-block">
                       <span class="aa-product-view-price">$34.99</span>
                       <p class="aa-product-avilability">Avilability: <span>In stock</span></p>
