--- a/products/shivalikpg.html
+++ b/products/shivalikpg.html
@@ -114,7 +114,7 @@
    <div class="aa-catg-head-banner-area">
      <div class="container">
       <div class="aa-catg-head-banner-content">
-        <h2>Product Name</h2>
+        <h2>Shivalik PG</h2>
       </div>
      </div>
    </div>
@@ -134,7 +134,7 @@
                   <div class="aa-product-view-slider">                                
                     <div id="demo-1" class="simpleLens-gallery-container">
                       <div class="simpleLens-container">
-                        <div class="simpleLens-big-image-container"><a data-lens-image="img/view-slider/large/polo-shirt-1.png" class="simpleLens-lens-image"><img src="img/view-slider/medium/polo-shirt-1.png" class="simpleLens-big-image"></a></div>
+                        <div class="simpleLens-big-image-container"><img src="../img/rooms/shivalik.jpg" class="simpleLens-big-image"></div>
                       </div>
                     </div>
                   </div>
@@ -142,19 +142,23 @@
                 <!-- Modal view content -->
                 <div class="col-md-7 col-sm-7 col-xs-12">
                   <div class="aa-product-view-content">
-                    <h3>Product Name</h3>
+                    <h3>Shivalik PG Rooms</h3>
                     <div class="aa-price-block">
-                      <span class="aa-product-view-price">$34.99</span>
-                      <p class="aa-product-avilability">Avilability: <span>In stock</span></p>
-                    </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis animi, veritatis quae repudiandae quod nulla porro quidem, itaque quis quaerat!</p>
+                      <span class="aa-product-view-price">4900/month</span>
+                      <p class="aa-product-avilability">Avilability: <span>6 Rooms</span></p>
+                    <ul>
+                      <li>Address: Allahabad, Bajwara, Nandan, Hoshiarpur, Punjab 146021</li>
+                      <li>Owner: Mr. Singh</li>
+                      <li>Phone No.: +91-5463455473</li>
+                    </ul>
+                  </div>
                     <div class="aa-prod-quantity">
                       <p class="aa-prod-category">
-                        Category: <a href="#">Category Name</a>
+                        Category: <a href="#">Hostel/PG Rooms</a>
                       </p>
                     </div>
                     <div class="aa-prod-view-bottom">
-                      <a class="aa-add-to-cart-btn" href="#">Buy Now!</a>
+                      <a class="aa-add-to-cart-btn" href="#">Book Now!</a>
                     </div>
                   </div>
                 </div>
@@ -168,16 +172,37 @@
               <!-- Tab panes -->
               <div class="tab-content">
                 <div class="tab-pane fade in active" id="description">
-                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                  <ul>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod, culpa!</li>
-                    <li>Lorem ipsum dolor sit amet.</li>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor qui eius esse!</li>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, modi!</li>
+                  <ul class="row">
+                    <li class="col-lg-3 col-sm-6 col-12">
+                      <figure>
+                        <a class="aa-product-img" href="#"><img src="../img/rooms/shivalikrooms.jpg" alt="img"></a>
+                      </figure>                        
+                    </li>
+                    <li class="col-lg-3 col-sm-6 col-12">
+                      <figure>
+                        <a class="aa-product-img" href="#"><img src="../img/rooms/shivalikroom2.jpg" alt="img"></a>
+                      </figure>                        
+                    </li>
+                    <li class="col-lg-3 col-sm-6 col-12">
+                      <figure>
+                        <a class="aa-product-img" href="#"><img src="../img/rooms/shivalikcorridor.jpg" alt="img"></a>
+                      </figure>                        
+                    </li>
+                    <li class="col-lg-3 col-sm-6 col-12">
+                      <figure>
+                        <a class="aa-product-img" href="#"><img src="../img/rooms/shivalikdining.jpg" alt="img"></a>
+                      </figure>                        
+                    </li>
                   </ul>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum, iusto earum voluptates autem esse molestiae ipsam, atque quam amet similique ducimus aliquid voluptate perferendis, distinctio!</p>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis ea, voluptas! Aliquam facere quas cumque rerum dolore impedit, dicta ducimus repellat dignissimos, fugiat, minima quaerat necessitatibus? Optio adipisci ab, obcaecati, porro unde accusantium facilis repudiandae.</p>
+                  <p>Shivalik PG is situated on the outskirts of the main city keeping students away from the huste-bustle of the city. Students here Enjoy the nature and also there is no disturbance for studies. The staff is cooperative.</p>
+                  <ul>
+                    <li>2 Storey Building Having Around 30 rooms</li>
+                    <li>Spacious Rooms and Corridors</li>
+                    <li>Badminton Court</li>
+                    <li>Hygenic Mess and Good Quality of Food</li>
+                    <li>Surrounded by Lush Green</li>
+                    <li>5 mins from College by Vehicle</li>
+                  </ul>
                 </div>
               </div>
             </div>
